// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sweetest > should print the \`describe\` and \`it\` names and statuses properly 1`] = `
"Inside test case 1
Inside test case 2
Inside test case 3
Inside test case 4
✅ Test Suite
	✅ Test Case 1
	✅ Test Case 2
	✅ Inner Test Suite
		✅ Test Case 3
		✅ Test Case 4"
`;

exports[`Sweetest > should show an error indication when all of the tests in a suite have failed 1`] = `
"❌ Test Suite
	❌ Test Case 1
		 Expected \`1\` to be \`2\`
	❌ Test Case 2
		 Expected \`1\` to be \`3\`"
`;

exports[`Sweetest > should show an error indication when an inner suite have failed 1`] = `
"❌ Test Suite
	✅ Test Case 1
	❌ Inner Test Suite
		✅ Test Case 2
		❌ Test Case 3
			 Expected \`1\` to be \`2\`"
`;

exports[`Sweetest > should show an error indication when some of the tests in a suite have failed 1`] = `
"❌ Test Suite
	❌ Test Case 1
		 Expected \`1\` to be \`2\`
	✅ Test Case 2"
`;
